Complete prog2 HW02

--- a/lectures/progII/HW02/Dockerfile
+++ b/lectures/progII/HW02/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:7
 COPY . /Users/wirthjan/notes/lectures/progII
 WORKDIR /Users/wirthjan/notes/lectures/progII
-RUN javac NumberStuff.java
-RUN java NumberStuff
+RUN javac AnagrammCheck.java
+RUN java AnagrammCheck "Smithy Stank" "My Hat Stinks"
+RUN java AnagrammCheck "notanangramlol " "hellno"
