Continue prog2 homework

--- a/lectures/progII/HW03/Makefile
+++ b/lectures/progII/HW03/Makefile
@@ -1,4 +1,4 @@
 main:
-	docker build -t my-java-app .
+	docker build --no-cache -t my-java-app .
 build:
 	docker run --rm -v "$PWD":/usr/src/myapp -w /usr/src/myapp openjdk:7 javac *.java
