--- a/lectures/progII/HW03/Dockerfile
+++ b/lectures/progII/HW03/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:7
 COPY . /Users/wirthjan/notes/lectures/progII
 WORKDIR /Users/wirthjan/notes/lectures/progII
 RUN javac TokenTest.java
-RUN java TokenTest
+RUN java -ea TokenTest
