--- a/lectures/progII/HW04/Makefile
+++ b/lectures/progII/HW04/Makefile
@@ -1,4 +1,4 @@
 main:
 	docker build --no-cache -t my-java-app .
 build:
-	docker run --rm -v "$PWD":/usr/src/myapp -w /usr/src/myapp openjdk:7 javac *.java
+	docker run --rm -v `pwd`:/usr/src/myapp -w /usr/src/myapp openjdk:7 javac *.java
