--- a/lectures/progII/HW05/Dockerfile
+++ b/lectures/progII/HW05/Dockerfile
@@ -2,10 +2,4 @@ FROM openjdk:7
 COPY . /Users/wirthjan/notes/lectures/progII
 WORKDIR /Users/wirthjan/notes/lectures/progII
 RUN javac Node.java
-RUN java -ea Node.java
-RUN javac NodeReader.java
-RUN java -ea NodeReader.java
-RUN javac NonTerminalNode.java
-RUN java -ea NonTerminalNode.java
-RUN javac TerminalNode.java
-RUN java -ea TerminalNode.java
+RUN java -ea Node
