--- a/lectures/progII/HW07/Dockerfile
+++ b/lectures/progII/HW07/Dockerfile
@@ -1,9 +1,7 @@
 FROM openjdk:7
 COPY . /Users/wirthjan/notes/lectures/progII
 WORKDIR /Users/wirthjan/notes/lectures/progII
-# RUN javac -classpath . de/uniheidelberg/cl/prog2/node/Node.java
-# RUN java -ea  de.uniheidelberg.cl.prog2.node.Node
-# RUN javac -classpath . de/uniheidelberg/cl/prog2/io/NodeReader.java
-# RUN java -ea  de.uniheidelberg.cl.prog2.io.NodeReader parse-trees.txt
-RUN javac MyDate.java
-RUN java -ea MyDate
+# RUN javac MyDate.java
+# RUN java -ea MyDate
+RUN javac PersonTester.java
+RUN java -ea PersonTester
